# apps/be/internal/menu/dto/update_description_request.dto.go
@@ -1,0 +1,22 @@
+package dto
+
+import "mime/multipart"
+
+type UpdateDescriptionRequestDTO struct {
+	Preview string     `json:"preview"`
+	Details string     `json:"details"`
+	Tags    []TagDTO   `json:"tags"`
+	Images  []ImageDTO `json:"images"`
+}
+
+type TagDTO struct {
+	ID  uint   `json:"id"`
+	Tag string `json:"tag"`
+}
+
+type ImageDTO struct {
+	ID         uint                  `json:"id"`
+	ImageURL   string                `json:"image_url"`
+	Order      string                `json:"order"`
+	UploadFile *multipart.FileHeader `json:"-" form:"file"`
+}
