# apps/be/internal/menu/route/menu.route.go
@@ -5,8 +5,8 @@ import (
 	"gorm.io/gorm"
 
 	"be/internal/menu/controller"
-	"be/internal/menu/service"
 	"be/internal/menu/repository"
+	"be/internal/menu/service"
 	"be/internal/middleware"
 )
 
@@ -18,11 +18,12 @@ func InitMenuRoutes(router fiber.Router, db *gorm.DB) {
 	group := router.Group("/menus", middleware.JWTProtected())
 
 	// ✅ 여기에 API들 등록
-	group.Get("/", ctrl.GetMenus)        // GET /api/menus
-	group.Post("/", ctrl.SyncMenus)      // POST /api/menus/
+	group.Get("/", ctrl.GetMenus)   // GET /api/menus
+	group.Post("/", ctrl.SyncMenus) // POST /api/menus/
 	group.Get("/board/:categoryID", ctrl.GetMenuBoard)
 	group.Get("/:menuID", ctrl.GetDescription)
-//	group.Post("/", ctrl.CreateMenus)      // POST /api/menus
-//	group.Patch("/:menuId", ctrl.UpdateMenus)    // PUT /api/menus/:id
-//	group.Delete("/:menuId", ctrl.DeleteMenus) // DELETE /api/menus/:id
+	group.Patch("/:menuID", ctrl.UpdateDescription)
+	//	group.Post("/", ctrl.CreateMenus)      // POST /api/menus
+	//	group.Patch("/:menuId", ctrl.UpdateMenus)    // PUT /api/menus/:id
+	//	group.Delete("/:menuId", ctrl.DeleteMenus) // DELETE /api/menus/:id
 }
